# deriv-ai-decision-assistant

./: README.md
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/auxiliary/: __init__.py  analyze_logic.py
backend/clients/: __init__.py  gemini_client.py
backend/models/: analyze.py
backend/routes/: analyze.py  health.py
docs/: mock-responses.md  user-stories.md
